--- a/src/main/java/resources/data.properties
+++ b/src/main/java/resources/data.properties
@@ -1,7 +1,7 @@
 browser=chrome
-url=http://ccpqa-customerportal.arpatech.com/auth/login
+url=http://ccpuat-customerportal.arpatech.com/auth/login
 username=ccptestmain@arpatech.com
 pswd=Connection123
-url1=http://ccpqa-mgmnt.arpatech.com/auth/login
+url1=http://ccpuat-mgmnt.arpatech.com/auth/login
 username1=ccpmgmttest1@arpatech.com
 password1=Connection123
